# hybrid-text-retrieval-toolkit

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/_report/: research_report.md
docs/test_results/: coverage_summary.txt  pytest_output.txt  quality_gates.txt
results/: scifact__bm25__metrics.json  scifact__bm25__runs.jsonl  scifact__dense__metrics.json  scifact__dense__runs.jsonl  scifact__qrels.json  scifact__rrf(bm25+dense)__metrics.json  scifact__rrf(bm25+dense)__runs.jsonl
results/_style/: repo.mplstyle
src/hr/: data.py  types.py
src/hr/cli/: main.py
src/hr/encoders/: cross.py
src/hr/fusion/: linear.py  rrf.py
src/hr/indexes/: base.py  bm25.py  dense.py  late_interaction.py
src/hr/scoring/: metrics.py  plots.py  runner.py
tests/: test_bm25.py  test_fusion.py  test_metrics.py  test_plots.py
tests/fixtures/: tiny_docs.json
